--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My personal portfolio website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack",
+    "webpack-watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,17 @@
   "bugs": {
     "url": "https://github.com/Jamesoc23/portfolio/issues"
   },
-  "homepage": "https://github.com/Jamesoc23/portfolio#readme"
+  "homepage": "https://github.com/Jamesoc23/portfolio#readme",
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^7.1.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
