--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,8 @@ version: 0.1
 phases:
   build:
     commands:
-      - echo Generating artifacts
+      - npm install
+      - npm run webpack
 
 artifacts:
   files:
@@ -11,3 +12,4 @@ artifacts:
     - favicon.ico
     - styles/*
     - images/*
+    - dist/bundle.js
