--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - npm install
-      - npm run webpack --mode=development
+      - npm run webpack
 
 artifacts:
   files:
